fix: remove overflow on custom article creation page

--- a/frontend/styles/style.scss
+++ b/frontend/styles/style.scss
@@ -670,6 +670,10 @@ main {
       background-color: $grey1;
     }
   }
+
+  .loader {
+    height: auto;
+  }
 }
 
 // archives
